--- a/sealevel-nostd-entrypoint/Cargo.toml
+++ b/sealevel-nostd-entrypoint/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "solana-nostd-entrypoint"
-version = "0.6.0"
+name = "sealevel-nostd-entrypoint"
+version = "0.1.0"
 edition = "2021"
 description = "A zerocopy, no_alloc/no_std entrypoint for solana programs."
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0"
 authors = [
     "Cavey Cool <caveycool@gmail.com>",
     "Magnetar Fields <0xMAGNETAR@proton.me>",
 ]
-repository = "https://github.com/cavemanloverboy/solana-nostd-entrypoint"
+repository = "https://github.com/rtrombone/sealevel-nostd-entrypoint"
 
 [lib]
 crate-type = ["cdylib", "lib"]
